# wit-ai-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: client.rs  common_types.rs  dictation.rs  entities.rs  errors.rs  intents.rs  language.rs  lib.rs  message.rs  speech.rs  traits.rs  utterances.rs
tests/: entities.rs  intents.rs  language.rs  message.rs  traits.rs  utterances.rs
tests/files/: language.json  message.json
tests/files/entities/: create.json  delete.json  get_all.json  get_one.json  update.json
tests/files/intents/: create.json  delete.json  get_all.json  get_one.json
tests/files/traits/: create.json  delete.json  get_all.json
tests/files/utterances/: create.json  delete.json  get_all.json
