[package]
name = "wit_ai_rs"
version = "0.1.1"
edition = "2021"
authors = ["Brendon Hablutzel"]
license = "MIT"
repository = "https://github.com/Brendon-Hablutzel/wit-ai-rs"
description = "An unofficial Rust crate for interacting with the wit.ai API"
keywords = ["wit", "wit_ai", "witai", "nlp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url = "2.5.0"

[dev-dependencies]
mockito = "1.2.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-test = "0.4.3"
